--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: java
-
-script:
-  - mvn test jacoco:report
+jdk:
+  - oraclejdk8
 after_success:
-  - mvn coveralls:report
+  - mvn test jacoco:report coveralls:report
